--- a/TypingGlovesApp/game.project
+++ b/TypingGlovesApp/game.project
@@ -15,4 +15,5 @@ input_method = HiddenInputField
 title = TypingGlovesApp
 dependencies#0 = https://github.com/subsoap/defos/archive/master.zip
 dependencies#1 = https://github.com/britzl/gooey/archive/master.zip
+dependencies#2 = https://github.com/britzl/monarch/archive/master.zip
 
